fix unwrap and mark per line

--- a/all.scss
+++ b/all.scss
@@ -16,6 +16,11 @@
     font-size: 16px !important;
     line-height: 1.6em;
     background-color: '#282c34';
+    overflow-x: auto;
+    white-space: nowrap;
+    > div {
+        white-space: nowrap;
+    }
 }
 
 .span-highlight-1 {
